--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,28 @@
 [tox]
-envlist = py35
+envlist = coverage-clean,py35,flake8,coverage-report
+
 
 [testenv]
-commands=python tests/test_http_crawler.py
+deps =
+    -rrequirements-dev.txt
+commands = {posargs:coverage run -m pytest}
+
+
+[testenv:flake8]
+deps = flake8
+skip_install = true
+commands = flake8 src tests setup.py
+
+
+[testenv:coverage-clean]
+deps = coverage
+skip_install = true
+commands = coverage erase
+
+
+[testenv:coverage-report]
+deps = coverage
+skip_install = true
+commands =
+    coverage report
+    coverage html
