Set up bump version

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,9 @@
 [bdist_wheel]
 universal=1
+
+[bumpversion]
+current_version = 0.1.2
+commit = True
+tag = True
+
+[bumpversion:file:src/http_crawler/__init__.py]
