--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = coverage-clean,py35,flake8,coverage-report
+envlist = coverage-clean,py27,py34,py35,py36,flake8,coverage-report
 
 
 [testenv]
