--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,19 @@
 language: python
-python:
-- '3.5'
+
 install:
 - pip install tox
+
+matrix:
+  include:
+    - python: 2.7
+      env: TOXENV=py27
+    - python: 3.4
+      env: TOXENV=py34
+    - python: 3.5
+      env: TOXENV=py35
+    - python: 3.6
+      env: TOXENV=py36
+
 script:
 - tox
 deploy:
