--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ commands = {posargs:coverage run -m pytest}
 
 
 [testenv:flake8]
+basepython = python3.5
 deps = flake8
 skip_install = true
 commands = flake8 src tests setup.py
