Caching for faster builds!

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,11 @@ matrix:
     - python: 3.5
       env: TOXENV=flake8
 
+cache:
+  directories:
+    - $HOME/.cache/pip
+    - .tox
+
 script:
 - tox
 deploy:
